--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ lessc styles.less styles.css
       <a href="#usage">uso</a>
       <a href="#docs" id="guide-link">lenguaje</a>
       <a href="#reference" id="guide-link">referencia</a>
-      <a href="#changes" id="changes-link">changes</a>
+      <a href="#changes" id="changes-link">cambios</a>
       <a href="https://github.com/less/less.js">fuente</a>
       <a href="#about">acerca de</a>
       <a href="http://less2css.org/" target="_blank">¡Pruébalo ahora!</a>
@@ -1517,7 +1517,7 @@ isunit(@numberOrAnything, "rem");       // * devuelve true si el primer parámet
 </ul>
 
 
-<p>_Devuelve: contenido del <code>string</code> sin comillas.</p>
+<p>Devuelve: contenido del <code>string</code> sin comillas.</p>
 
 <p>Ejemplo:</p>
 
@@ -3265,7 +3265,7 @@ contrast(hsl(90, 100%, 50%),#000000,#ffffff,60%);
 
 <p><img src="http://placehold.it/100x40/ff6600/ffffff&amp;text=ff6600" alt="Color 1" />
 <img src="http://placehold.it/100x40/cccccc/000000&amp;text=cccccc" alt="Color 2" />
-<img src="http://placehold.it/100x40/ff2900/ffffff&amp;text=ff2900" alt="Color 3" /></p>
+<img src="http://placehold.it/100x40/ffc299/ffffff&amp;text=ff2900" alt="Color 3" /></p>
 
 <pre><code>hardlight(#ff6600, #ffffff);
 </code></pre>
@@ -3746,16 +3746,18 @@ El selector interpolación y los cambios en las funciones matemáticas y en las 
   <div class="content">
     <h1>En otros idiomas</h1>
     <ul>
+      <li>Inglés: <a href="http://lesscss.net">http://lesscss.org</a> (versión original)</li>
       <li>Chino: <a href="http://lesscss.net">http://lesscss.net</a></li>
       <li>Danés: <a href="http://lesscss.dk">http://lesscss.dk</a></li>
+      <li>Francés: <a href="http://luckymarmot.com/lesscss">http://luckymarmot.com/lesscss</a></li>
       <li>Alemán: <a href="http://lesscss.de">http://lesscss.de</a></li>
-      <li>Indoneso: <a href="http://bertzzie.com/post/7/dokumentasi-less-bahasa-indonesia">http://bertzzie.com/post/7/dokumentasi-less-bahasa-indonesia</a></li>
+      <li>Indonesio: <a href="http://bertzzie.com/post/7/dokumentasi-less-bahasa-indonesia">http://bertzzie.com/post/7/dokumentasi-less-bahasa-indonesia</a></li>
       <li>Japonés: <a href="http://less-ja.studiomohawk.com/">http://less-ja.studiomohawk.com/</a></li>
       <li>Polaco: <a href="http://ciembor.github.com/lesscss.org/">http://ciembor.github.com/lesscss.org/</a></li>
+      <li>Portugués: <a href="http://giovanneafonso.github.io/lesscss.org/">http://giovanneafonso.github.io/lesscss.org/</a></li>
       <li>Ruso: <a href="http://lesscss.ru">http://lesscss.ru</a></li>
       <li>Ucraniano: <a href="http://komaval.github.com/lesscss.org/">http://komaval.github.com/lesscss.org/</a></li>
-      <li>Bielorusso: (Desactualizado) <a href="http://www.designcontest.com/show/lesscss-be">http://www.designcontest.com/show/lesscss-be</a></li>
-      <li>Portugués: (Desactualizado) <a href="http://lesscss.loopinfinito.com.br/">http://lesscss.loopinfinito.com.br/</a></li>
+      <li>Bielorruso: (Desactualizado) <a href="http://www.designcontest.com/show/lesscss-be">http://www.designcontest.com/show/lesscss-be</a></li>
     </ul>
   </div>
 </section>
@@ -3766,7 +3768,7 @@ El selector interpolación y los cambios en las funciones matemáticas y en las 
 
 <p>LESS fue desarrollado por <a href="http://cloudhead.io">Alexis Sellier</a>, más conocido como <a href="http://cloudhead.io">cloudhead</a>. Ahora es mantenido y desarrollado por el equipo LESS.</p>
 
-<p>Traducción realiza por <a href="http://cloudhead.io">Adrián Matellanes</a>. Puedes seguir mi blog <a href="http://amatellanes.wordpress.com/">amatellanes.wordpress.com</a></p>
+<p>Traducción realiza por <a href="https://twitter.com/adrimatellanes">Adrián Matellanes</a>. Puedes seguir mi blog <a href="http://amatellanes.wordpress.com/">amatellanes.wordpress.com</a></p>
 
     <footer>
         <p>Haciendo uso de <a href="http://github.com/less/less.js">LESS</a></p>
