--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
       <div id="logo"></div>
       <h2>El <span>lenguaje</span> dinámico <span>de hojas de estilo</span>.</h2>
       <h3>
-        LESS añade comportamiento dinámico a CSS, por ejemplo <span>variables</span>, <span>mixins</span>, <span>operaciones</span> y <span>funciones</span>.
-      </h3>
-      <h3>
-        LESS puede ejecutarse del lado del servidor (usando <span>Node.js</span> y <span>Rhino</span>) o <span>del lado del cliente</span> (en navegadores modernos).
+        LESS añade comportamiento dinámico a CSS, por ejemplo <span>variables</span>, <span>mixins</span>, <span>operaciones</span> y <span>funciones</span>. LESS puede ejecutarse del lado del servidor (usando <span>Node.js</span> y <span>Rhino</span>) o <span>del lado del cliente</span> (en navegadores modernos).
       </h3>
       <a id="download" href="https://raw.github.com/less/less.js/master/dist/less-1.5.0.min.js">
         <img src="/lesscss.org//images/download-button.png" />
