--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
       <h3>
         LESS añade comportamiento dinámico a CSS, por ejemplo <span>variables</span>, <span>mixins</span>, <span>operaciones</span> y <span>funciones</span>. LESS puede ejecutarse del lado del servidor (usando <span>Node.js</span> y <span>Rhino</span>) o <span>del lado del cliente</span> (en navegadores modernos).
       </h3>
-      <a id="download" href="https://raw.github.com/less/less.js/master/dist/less-1.5.1.min.js">
+      <a id="download" href="https://raw.github.com/less/less.js/master/dist/less-1.6.0.min.js">
         <img src="/lesscss.org//images/download-button.png" />
       </a><div id="download-info">
-      <div>version <code>1.5.1</code></div>
+      <div>version <code>1.6.0</code></div>
       <div><a href="https://github.com/less/less.js/blob/master/CHANGELOG.md">registro de cambios</a></div>
     </div>
     </section>
@@ -3792,7 +3792,13 @@ contrast(hsl(90, 100%, 50%),#000000,#ffffff,60%);
 
 <section id="changes" class="page page-dark">
   <h1>Cambios</h1>
-  <div class="content">
+    <div class="content">
+    <h2>1.6.0</h2>
+
+<p>Por favor echa un vistazo en el <a href="https://github.com/less/less.js/blob/master/CHANGELOG.md">registro de cambios</a> para ver la lista completa de cambios introducidos en esta versión.</p>
+
+<p>Estamos rediseñando la página Web. Puedes encontrar toda la información actualizada sobre nuestro progreso en <a href="http://less.github.io/less-docs">http://less.github.io/less-docs</a>.</p>
+    
     <h2>1.5.0</h2>
 
 <p>Se han realizado unos cuantos cambios internos em less (por ejemplo, los nodos ya no tienen disponible la función toCSS), aunque no se han realizados cambios de ruptura en el lenguaje. A continuación vamos a ver algunos de los cambios realizados, mira el <a href="https://github.com/less/less.js/blob/master/CHANGELOG.md">registro de cambios</a> para consultar la lista completa de cambios.</p>
