--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@ lessc styles.less styles.css
 
 <section id="synopsis" class="page page-dark">
   <div class="content">
+    <h2>Nueva página</h2>
+
+<p>Fijate que esta página no está actualizada y pronto será reemplazada por nuestra nueva página, que actualmente se encuentra en <a href="http://less.github.io/less-docs">less.github.io/less-docs</a>. Por favor visita esta página para consultar toda la información actualizada y considera leer la sección de cambios de esta página y el registro de cambios.</p>
 
 <h2>Variables</h2>
 
