Fixed link to new less docs site.

--- a/index.html
+++ b/index.html
@@ -3931,7 +3931,7 @@ El selector interpolación y los cambios en las funciones matemáticas y en las 
   <div class="content">
     <h1>En otros idiomas</h1>
     <ul>
-      <li>Inglés: <a href="http://lesscss.net">http://lesscss.org</a> (versión original)</li>
+      <li>Inglés: <a href="http://lesscss.org">http://lesscss.org</a> (versión original)</li>
       <li>Chino: <a href="http://lesscss.net">http://lesscss.net</a></li>
       <li>Danés: <a href="http://lesscss.dk">http://lesscss.dk</a></li>
       <li>Francés: <a href="http://luckymarmot.com/lesscss">http://luckymarmot.com/lesscss</a></li>
